--- a/index.html
+++ b/index.html
@@ -41,7 +41,31 @@
         <img src="./images//banner.png" alt="" />
       </div>
     </header>
-    <main></main>
+    <main>
+      <section id="our_features">
+        <div id="feature_image">
+          <img src="./images/team1.png" alt="" />
+          <img src="./images/team2.png" alt="" />
+          <img src="./images/team3.png" alt="" />
+          <img src="./images/team4.png" alt="" />
+        </div>
+        <div id="feature_title">
+          <h1>
+            <span id="title1">Quick list</span> <span id="title2">of Our</span>
+            <br />
+            <span id="title3">Features</span>
+          </h1>
+          <p>
+            There are many variations of passages of Lorem Ipsum available,
+            <br />
+            but the majority have suffered alteration in some form, by injected
+            <br />
+            humour, or randomised words which don't look even
+          </p>
+          <button>Explore More</button>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
