--- a/index.html
+++ b/index.html
@@ -65,6 +65,73 @@
           <button>Explore More</button>
         </div>
       </section>
+      <sections id="love_enjoy">
+        <div id="love_enjoy_title">
+          <h1>Features you will<br />love & enjoy</h1>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the <br />
+            majority have suffered alteration in some form, by injected humour,
+            or <br />
+            randomised words which don't look even
+          </p>
+          <div class="love_enjoy_card">
+            <h4>Dexktop & Mobile Version</h4>
+            <p>
+              <small
+                >There are many variations of passages of Lorem Ipsum
+                available,<br />
+                but the majority have suffered alteration in some form, by
+                <br />
+                injected humour, or randomised...........</small
+              >
+            </p>
+          </div>
+          <div class="love_enjoy_card">
+            <h4>Drag & Drop Builder</h4>
+            <p>
+              <small
+                >There are many variations of passages of Lorem Ipsum
+                available,<br />
+                but the majority have suffered alteration in some form, by
+                <br />
+                injected humour, or randomised...........</small
+              >
+            </p>
+          </div>
+          <div class="love_enjoy_card">
+            <h4>Awesome Modern Design</h4>
+            <p>
+              <small
+                >There are many variations of passages of Lorem Ipsum
+                available,<br />
+                but the majority have suffered alteration in some form, by
+                <br />
+                injected humour, or randomised...........</small
+              >
+            </p>
+          </div>
+          <div class="love_enjoy_card">
+            <h4>Super Easy to Edit</h4>
+            <p>
+              <small
+                >There are many variations of passages of Lorem Ipsum
+                available,<br />
+                but the majority have suffered alteration in some form, by
+                <br />
+                injected humour, or randomised...........</small
+              >
+            </p>
+          </div>
+        </div>
+        <div id="love_enjoy_image">
+          <img src="./images/architect.png" alt="" />
+          <button>
+            <h1>10+Year</h1>
+            <h4>Experience</h4>
+          </button>
+        </div>
+      </sections>
     </main>
     <footer></footer>
   </body>
