some facts sectin design

--- a/index.html
+++ b/index.html
@@ -132,6 +132,38 @@
           </button>
         </div>
       </sections>
+      <section id="some_facts">
+        <div id="some_fact_title">
+          <h1>Some Facts</h1>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            <br />
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div id="some_fact_card_container">
+          <div class="some_fact_card">
+            <img src="./images/icons/ribon.png" alt="" />
+            <h3>54</h3>
+            <p><small>Awards Winnings</small></p>
+          </div>
+          <div class="some_fact_card">
+            <img src="./images/icons/projects.png" alt="" />
+            <h3>1458</h3>
+            <p><small>Project Finished</small></p>
+          </div>
+          <div class="some_fact_card">
+            <img src="./images/icons/customers.png" alt="" />
+            <h3>590</h3>
+            <p><small>Clients Worked</small></p>
+          </div>
+          <div class="some_fact_card">
+            <img src="./images/icons/email.png" alt="" />
+            <h3>22578</h3>
+            <p><small>Email Send</small></p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
