our sponspors and footer design

--- a/index.html
+++ b/index.html
@@ -164,7 +164,30 @@
           </div>
         </div>
       </section>
+      <section id="our_sponspors">
+        <div id="our_sponspors_title">
+          <h1>Our Sponspors</h1>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            <br />
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div id="our_sponspors_img">
+          <img src="./images/sponsors/amazon.png" alt="" />
+          <img src="./images/sponsors/figma.png" alt="" />
+          <img src="./images/sponsors/google.png" alt="" />
+          <img src="./images/sponsors/spotify.png" alt="" />
+          <img src="./images/sponsors/telerama.png" alt="" />
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>
+        <small
+          >All rights reserved copyright@2023 startup landing page design</small
+        >
+      </p>
+    </footer>
   </body>
 </html>
